base/ecom-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      serviceAccountName: ecr-reader
      containers:
        - name: frontend
          image: 016311861830.dkr.ecr.us-east-1.amazonaws.com/dev/ecom-frontend:latest
          ports:
            - containerPort: 3000
